# rustkanban

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  demo.tape  docker-compose.yml  install.sh  justfile
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy.yml  release.yml
HomebrewFormula/: rk.rb
aur/: PKGBUILD
crates/rk-client/: Cargo.toml
crates/rk-client/src/: app.rs  auth.rs  db.rs  export.rs  handler.rs  main.rs  model.rs  sync.rs  undo.rs  update.rs
crates/rk-client/src/ui/: board_mgmt.rs  delete_confirm.rs  detail.rs  help_bar.rs  mod.rs  search_bar.rs  tab_bar.rs
crates/rk-server/: .env.example  Cargo.toml  Dockerfile
crates/rk-server/migrations/: 20260308000000_initial.sql  20260309000000_api_tokens.sql  20260310000000_boards.sql
crates/rk-server/src/: auth.rs  config.rs  error.rs  main.rs  purge.rs  session.rs
crates/rk-server/src/routes/: account.rs  auth.rs  mod.rs  pages.rs  sync.rs
crates/rk-server/static/: style.css
crates/rk-server/templates/: account.html  base.html  error.html  home.html  login_success.html  login_token.html
crates/rk-shared/: Cargo.toml
crates/rk-shared/src/: lib.rs
docs/: SYNC.md  USE_CASES.md
docs/plans/: 2026-03-06-improvements-design.md  2026-03-06-improvements-plan.md  2026-03-06-rustkanban-design.md  2026-03-08-sync-design.md  2026-03-08-sync-implementation.md
scripts/: release.sh
src/: app.rs  db.rs  event.rs  export.rs  handler.rs  main.rs  model.rs  theme.rs  undo.rs
src/ui/: board.rs  delete_confirm.rs  detail.rs  help_bar.rs  mod.rs  modal.rs  search_bar.rs  sort_menu.rs  tag_screen.rs
