[package]
name = "rustkanban"
version = "0.1.0"
edition = "2021"
description = "A Rust terminal (TUI) kanban board with vim-inspired navigation, tags, search, and SQLite persistence"
license-file = "LICENSE"
keywords = ["kanban", "tui", "terminal", "productivity", "task"]
categories = ["command-line-utilities"]
repository = "https://github.com/shawn-nabizada/rustkanban"
readme = "README.md"

[[bin]]
name = "rk"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "6.0"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap_mangen = "0.2"

# Config for 'dist'
[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["shell"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
install-path = "CARGO_HOME"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
