[workspace]
members = ["crates/rk-client", "crates/rk-shared", "crates/rk-server"]
resolver = "2"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["shell"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
install-path = "CARGO_HOME"

[profile.dist]
inherits = "release"
lto = "thin"
