[workspace]
members = ["crates/rk-client", "crates/rk-shared", "crates/rk-server"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/shawn-nabizada/rustkanban"

[workspace.dependencies]
rk-shared = { version = "0.2.0", path = "crates/rk-shared", package = "rustkanban-shared" }

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["shell"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
install-path = "CARGO_HOME"

[profile.dist]
inherits = "release"
lto = "thin"
