[package]
name = "rustkanban-shared"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "Shared types for RustKanban sync protocol"
license-file = "../../LICENSE"

[package.metadata.dist]
dist = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
